# ProtoMapper

./: .CMakeUserPresets.json  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  TODO.md  vcpkg.json
ProtoMapper/: CMakeLists.txt  UnitTests.cmake
ProtoMapper/imports/: ProtoMapper.ixx  Scene.ixx
ProtoMapper/imports/renderer/: Image.ixx  Renderer.ixx  Shader.ixx  Texture.ixx  Vertex.ixx
ProtoMapper/imports/system/: Logger.ixx  LuaEngine.ixx  ResourceManager.ixx  Window.ixx
ProtoMapper/imports/ui/: Font.ixx  UIContainer.ixx
ProtoMapper/inc/: Components.hpp  Concepts.hpp  HeightMap2D.hpp  Image.hpp  Map.hpp  ProtoMapper.hpp  Renderer.hpp  ResourceManager.hpp  Scene.hpp  Shader.hpp  TS_Queue.hpp  TextAllocator.hpp  Texture.hpp  TileMap2D.hpp  TopMenu.hpp  UIContainer.hpp  UIGroup.hpp  Vertex.hpp
ProtoMapper/inc/components/: All.hpp  Common.hpp  UI.hpp
ProtoMapper/include/: Config.hpp  Font.hpp  Image.hpp  ProtoMapper.hpp  Renderer.hpp  Scene.hpp  Shader.hpp  Texture.hpp  UIContainer.hpp  Vertex.hpp  Window.hpp
ProtoMapper/include/renderer/: Image.hpp  Renderer.hpp  Shader.hpp  Texture.hpp  Vertex.hpp
ProtoMapper/include/stl/: dyn_array.hpp  resource.hpp
ProtoMapper/include/system/: Logger.hpp  LuaEngine.hpp  RenderingSystem.hpp  ResourceManager.hpp  System.hpp  Window.hpp
ProtoMapper/include/ui/: Font.hpp  UIContainer.hpp
ProtoMapper/src/: Components.cpp  Concepts.cpp  Font.cpp  HeightMap2D.cpp  Image.cpp  Logger.cpp  Map.cpp  ProtoMapper.cpp  Renderer.cpp  ResourceManager.cpp  Scene.cpp  Shader.cpp  TextAllocator.cpp  Texture.cpp  TileMap2D.cpp  TopMenu.cpp  UIContainer.cpp  UIGroup.cpp  UILogFrame.cpp  UIRoot.cpp  Vertex.cpp  Window.cpp  main.cpp
ProtoMapper/src/components/: Common.cpp  UI.cpp
ProtoMapper/src/renderer/: Image.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  Vertex.cpp
ProtoMapper/src/resources/: ResourceManager.cpp  Window.cpp
ProtoMapper/src/system/: Logger.cpp  LuaEngine.cpp  RenderingSystem.cpp  ResourceManager.cpp  System.cpp  Window.cpp
ProtoMapper/src/ui/: Font.cpp  UIContainer.cpp  UIRoot.cpp  UITitleBar.cpp  UITopMenu.cpp
ProtoMapper/tests/: dyn_array_test.cpp  shared_res_test.cpp
assets/config/: config.ini
assets/shaders/: DefaultFS.glsl  DefaultVS.glsl
cmake/: GNUOptions.cmake  MSVCOptions.cmake  UnitTests.cmake
config/: config.ini
config/data/text/licenses/: open_source_licenses.txt
config/profile/: user_default.ini
config/ui/: config.lua  titlebar.lua
